@@ -1,4 +1,5 @@
 ======================
+    ADDED: synchronizer: excluding files with '|' in the file filter (ex. '*.cpp *.h | *.moc.cpp' )
     ADDED: tooltips for squeezed tabs
     ADDED: sync-browse mode (if on, a directory-change in the active is also performed in the inactive panel)
     ADDED: beta-state incremental refresh. test it with fam enabled!
